<resources>
    <string name="app_name">干货集中营</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="name">Satan</string>
    <string name="github">https://github.com/wenjue</string>
    <string name="new_data">每日一干</string>
    <string name="type_data">分类干货</string>
    <string name="random_data">随机干货</string>
    <string name="about">关于</string>
    <string name="back">再按一次返回键退出</string>
    <string name="open_in_browser">在浏览器中打开</string>
    <string name="daimajia"><u>代码家</u></string>
    <string name="gank"><u>干货集中营</u></string>
    <string name="drakeet"><u>drakeet</u></string>
    <string name="meizi"><u>妹子.gank.io</u></string>
    <string name="me"><u>me</u></string>
    <string name="code"><u>项目源码</u></string>
    <array name="type">
        <item>福利</item>
        <item>Android</item>
        <item>iOS</item>
        <item>休息视频</item>
        <item>拓展资源</item>
        <item>前端</item>
        <item>瞎推荐</item>
        <item>App</item>
    </array>

</resources>
