<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:src="@drawable/icon_gank" />

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="Version 1.0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:text="* 感谢"
                android:textColor="@color/md_grey_800"
                android:textSize="16dp" />


            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="本应用所有的数据均来自干货集中营，感谢“代码家”以及”干货集中营“的所有编辑们的无私奉献。"
                android:textColor="@color/md_grey_800"
                android:textSize="16dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="* 声明"
                android:textColor="@color/md_grey_800"
                android:textSize="16dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="本应用仅限学习交流使用，不可作为商业用途。部分界面参考”drakeet“的”妹子.gank.io“"
                android:textColor="@color/md_grey_800"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="* 链接"
                android:textColor="@color/md_grey_800"
                android:textSize="16dp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_daimajia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daimajia"
                    android:textColor="@color/md_blue_900"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_gank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/gank"
                    android:textColor="@color/md_blue_900"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_drakeet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/drakeet"
                    android:textColor="@color/md_blue_900"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_meizi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/meizi"
                    android:textColor="@color/md_blue_900"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_satan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/me"
                    android:textColor="@color/md_blue_900"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/code"
                    android:textColor="@color/md_blue_900"
                    android:textSize="16dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>